style.css
.scrolled-down{
    transform:translateY(-100%); transition: all 0.3s ease-in-out;
  }
.scrolled-up{
    transform:translateY(0); transition: all 0.3s ease-in-out;
  }

.up{
  position: absolute;
  right:0;
  bottom:40%;
}

